--- a/css/style.css
+++ b/css/style.css
@@ -697,7 +697,7 @@ header .header-col.mid .social-icons {
     height: 100%;
     top:0;
     left: 0;
-    background: linear-gradient(0deg, rgba(0 ,0 ,0, .4), rgba(0 ,0 ,0,.4));
+    background: linear-gradient(0deg, rgba(0 ,0 ,0, .4), rgba(0 ,0 ,0,1.4));
   }
 
   .de-overlay-color{
