--- a/css/style.css
+++ b/css/style.css
@@ -20512,7 +20512,7 @@ border-radius:20px 0 0 20px;
   header.header-mobile #mainmenu>li>span {
     width: 36px;
     height: 36px;
-    background: url(../images/ui/arrow-down-light.png) center no-repeat;
+    background: url(../img/arrow-down-light.png) center no-repeat;
     position: absolute;
     right: 0;
     margin-top: 10px;
@@ -20521,15 +20521,15 @@ border-radius:20px 0 0 20px;
   }
 
   .dark-scheme header.header-mobile #mainmenu>li>span {
-    background: url(../images/ui/arrow-down-light.png) center no-repeat;
+    background: url(../img/arrow-down-light.png) center no-repeat;
   }
 
   header.header-mobile #mainmenu li span.active {
-    background: url(../images/ui/arrow-up-light.png) center no-repeat;
+    background: url(../img/arrow-up-light.png) center no-repeat;
   }
 
   .dark-scheme header.header-mobile #mainmenu li span.active {
-    background: url(../images/ui/arrow-up-light.png) center no-repeat;
+    background: url(../img/arrow-up-light.png) center no-repeat;
   }
 
   header.header-mobile #mainmenu li>ul>li>span {
@@ -21178,7 +21178,25 @@ border-radius:20px 0 0 20px;
   .menu_side_area .btn-main{
     display: none;
   }
-
+  .wow .subtitle{
+    font-size: 21px;
+  }
+  .bg-white{
+    background-color: #fff;
+  }
+  .z-index-top{
+    position: relative;
+    z-index: 999;
+  }
+  .text-center{
+    text-align: center;
+  }
+  .w-full{
+    width: 100%;
+  }
+  .project-head{
+    transform: translateY(-2.25rem);
+  }
   .pf_full_width .item {
     float: left;
     width: 100%;
