--- a/css/style.css
+++ b/css/style.css
@@ -15220,7 +15220,7 @@ section .color-overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--bg-dark-1);
+  background: black;
 }
 
 .overlay50 {
