--- a/css/style.css
+++ b/css/style.css
@@ -21315,3 +21315,76 @@ border-radius:20px 0 0 20px;
     width: auto;
   }
 }
+
+
+#logo_svg{
+  width: 80vw;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  animation: fill 0.5s ease forwards 4.4s;
+}
+#logo_svg path{
+  /* stroke-width: 3; */
+  animation: logo-stroke 0.5s ease forwards 4.4s;
+}
+#logo_svg path:nth-child(1){
+  stroke-dasharray: 425px;
+  stroke-dashoffset: 425px;
+  animation: logo-anime 2s ease forwards 2.4s;
+}
+#logo_svg path:nth-child(2){
+  stroke-dasharray: 446px;
+  stroke-dashoffset: 446px;
+  animation: logo-anime 2s ease forwards 2s;
+}
+#logo_svg path:nth-child(3){
+  stroke-dasharray: 368px;
+  stroke-dashoffset: 368px;
+  animation: logo-anime 2s ease forwards 1.6s;
+}
+#logo_svg path:nth-child(4){
+  stroke-dasharray: 384px;
+  stroke-dashoffset: 384px;
+  animation: logo-anime 2s ease forwards 1.2s;
+}
+#logo_svg path:nth-child(5){
+  stroke-dasharray: 374px;
+  stroke-dashoffset: 374px;
+  animation: logo-anime 2s ease forwards 0.8s;
+}
+#logo_svg path:nth-child(6){
+  stroke-dasharray: 274px;
+  stroke-dashoffset: 274px;
+  animation: logo-anime 2s ease forwards 0.4s;
+}
+#logo_svg path:nth-child(7){
+  stroke-dasharray: 446px;
+  stroke-dashoffset: 446px;
+  animation: logo-anime 2s ease forwards ;
+}
+
+@keyframes logo-anime {
+  to{
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes logo-stroke {
+  from{
+    stroke-width: 3;
+  }
+  to{
+    stroke-width: 0;
+  }
+}
+
+@keyframes fill {
+  from{
+    fill: transparent;
+  }
+  to{
+    fill: #fff;
+  }
+}
